# rust_firefly

./: Cargo.toml  README.md
resource/: dev.yml  prod.yml
resource/mybatis/: company.yml
src/: lib.rs  main.rs
src/config/: boot.rs  logger.rs  mod.rs
src/controller/: com_controller.rs  mod.rs
src/db/: mod.rs
src/middleware/: session.rs
src/model/: mod.rs  models.rs
src/router/: app.rs  company.rs  mod.rs
src/service/: com_service.rs  mod.rs
src/utils/: gid.rs  mod.rs  render.rs  tool.rs  tpl.rs  yml.rs
static/common/: base.js  juicer-config.js
static/css/: login.css  style.css
static/js/: login.js  master.js
static/js/company/: index.js
templates/: home.html  login.html
templates/company/: index.html
templates/macro/: gcss.html  gjs.html  header.html
