[package]
name = "rust_firefly"
version = "0.1.0"
authors = ["万中胜 <wzs@ecwf.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
#serde and base types
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.15"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
#log
log = "0.4"
fast_log = "1.3"
#web server
actix-web = "3"
actix-http = "2.0"
actix-files = "0.5.0"
actix-session = "0.4.0"
#rbatis orm dep
rbatis = { version = "1.8", features = ["snowflake"] }
handlebars = { version = "3.5.2", features = ["dir_source"] }
